added authorizations, admins can create boat listing

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,7 +38,7 @@
 
   <div class="field">
     <%= form.label :phone_number %>
-    <%= form.number_field :phone_number %>
+    <%= form.text_field :phone_number, placeholder:"Start with Country Code" %>
   </div>
 
   <div class="actions">
