--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,14 @@
   <%= link_to "Log Out", logout_path %>
 <% else %>
   <%= link_to "Sign Up", signup_path %> or 
-  <%= link_to "Log In", login_path %>
+  <%= link_to "Log In", login_path %> <br/>
+  <%= link_to "Sign in with Google", "/auth/google_oauth2" %>
+
 <% end %>
 <p id=”notice”><%= notice %></p>
 
 <h1>Landing Page</h1>
 <p>Welcome to MMCompositeCraft!</p>
+
+<%= link_to "View Products", boats_path %> <br/>
+<%= link_to "View Users", users_path %>
