--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,5 +20,9 @@
   <%= @user.phone_number %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to 'Edit', edit_user_path(@user) %>
+<% if current_user.admin? %>
 <%= link_to 'Back', users_path %>
+<% else %>
+<%= link_to 'Back', root_path %>
+<% end %>
