--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>No.</th>
       <th>Make</th>
       <th>Model</th>
       <th>Year</th>
@@ -15,13 +16,15 @@
       <th>Length (ft)</th>
       <th>Fuel type</th>
       <th>Hull material</th>
-      <th colspan="3"></th>
+      <th>Action</th>
+      <th colspan="12"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @boats.each do |boat| %>
+    <% @boats.each_with_index do |boat, index| %>
       <tr>
+        <td><%= index + 1 %></td>
         <td><%= boat.make %></td>
         <td><%= boat.model %></td>
         <td><%= boat.year %></td>
@@ -32,16 +35,13 @@
         <td><%= boat.length %></td>
         <td><%= boat.fuel_type %></td>
         <td><%= boat.hull_material %></td>
-        <td><%= link_to 'Show', boat %></td>
-        <td><%= link_to 'Edit', edit_boat_path(boat) %></td>
-        <td><%= link_to 'Destroy', boat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', boat %>  <%= link_to 'Edit', edit_boat_path(boat) %>  <%= link_to 'Destroy', boat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
 <%= link_to 'New Boat', new_boat_path %>
 <%= link_to 'Back', root_path %>
 
