--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,47 +1,3 @@
-<p id="notice"><%= notice %></p>
+<%= render "boats/index" %>
 
-<h1>Boats</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>No.</th>
-      <th>Make</th>
-      <th>Model</th>
-      <th>Year</th>
-      <th>Condition</th>
-      <th>Price (RM)</th>
-      <th>Type</th>
-      <th>Class</th>
-      <th>Length (ft)</th>
-      <th>Fuel type</th>
-      <th>Hull material</th>
-      <th>Action</th>
-      <th colspan="12"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @boats.each_with_index do |boat, index| %>
-      <tr>
-        <td><%= index + 1 %></td>
-        <td><%= boat.make %></td>
-        <td><%= boat.model %></td>
-        <td><%= boat.year %></td>
-        <td><%= boat.condition %></td>
-        <td><%= boat.price %></td>
-        <td><%= boat.make_type %></td>
-        <td><%= boat.boat_class %></td>
-        <td><%= boat.length %></td>
-        <td><%= boat.fuel_type %></td>
-        <td><%= boat.hull_material %></td>
-        <td><%= link_to 'Show', boat %>  <%= link_to 'Edit', edit_boat_path(boat) %>  <%= link_to 'Destroy', boat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-<%= link_to 'New Boat', new_boat_path %>
-<%= link_to 'Back', root_path %>
 
