--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,34 +1,33 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
-
+<%= paginate @users %>
 <table>
   <thead>
     <tr>
-      <th>No.</th>
       <th>First name</th>
       <th>Last name</th>
       <th>Email</th>
       <th>Phone number</th>
+      <th>Action</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @users.each_with_index do |user, index| %>
+    <% @users.each do |user| %>
       <tr>
-        <td><%= index + 1 %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.email %></td>
         <td><%= user.phone_number %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user %> <%= link_to 'Edit', edit_user_path(user) %> <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+<%= paginate @users %>
+
 
 <br>
 <%= link_to 'Back', root_path %>
