--- a/app/views/boats/_index.html.erb
+++ b/app/views/boats/_index.html.erb
@@ -19,7 +19,7 @@
   </thead>
 
   <tbody>
-    <% @boats.each do |boat, index| %>
+    <% @boats.each do |boat| %>
         <tr>
           <td><%= boat.make %></td>
           <td><%= boat.model %></td>
@@ -46,6 +46,6 @@
 <% if current_user %>
   <% if current_user.admin? %>
     <%= link_to 'New Boat', new_boat_path %> 
-    <%= link_to 'Back', root_path %>
   <% end %>
+    <%= link_to 'Back', root_path %>
 <% end %>
