--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -1,3 +1,7 @@
-<%= render "boats/index" %>
-
-
+<%= form_with url: boats_path, method: 'get' do |form| %>
+	<%= form.text_field :search, placeholder: 'Search By Class' %>
+	<%= form.submit 'Search', class:'btn btn-primary ml-2' %>
+<% end %>
+<div id='boats-container'>
+	<%= render partial:"boats/index" %>
+</div>
