--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,8 @@
-<p id="notice"><%= notice %></p>
+<%= form_with url: users_path, method: 'get' do |form| %>
+  <%= form.text_field :search, placeholder: 'Search By First Name' %>
+  <%= form.submit 'Search', class:'btn btn-primary ml-2' %>
+<% end %>
 
-<h1>Users</h1>
-<%= paginate @users %>
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Phone number</th>
-      <th>Action</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.phone_number %></td>
-        <td><%= link_to 'Show', user %> <%= link_to 'Edit', edit_user_path(user) %> <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<%= paginate @users %>
-
-
-<br>
-<%= link_to 'Back', root_path %>
+<div id='users-container'>
+  <%= render partial:"users/index" %>
+</div>
