--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>First name:</strong>
+  <strong>First Name:</strong>
   <%= @user.first_name %>
 </p>
 
 <p>
-  <strong>Last name:</strong>
+  <strong>Last Name:</strong>
   <%= @user.last_name %>
 </p>
 
@@ -16,8 +16,17 @@
 </p>
 
 <p>
-  <strong>Phone number:</strong>
+  <strong>Phone Number:</strong>
   <%= @user.phone_number %>
+</p>
+
+<p>
+  <strong>Appointment Date:</strong>
+  <% @user.appointments.each do |a| %>
+  <br/>
+  <%= a.appointment_date.strftime("%d/%m/%y %R")  %>
+  <br/>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %>
