--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,4 +1,11 @@
+<p> Appointment ID: <%= @appointment.id %> </p>
 <p> Appointment Date : <%= @appointment.appointment_date.strftime("%d/%m/%y %R") %> </p>
 <p> Appointment Info : <%= @appointment.appointment_info %> </p>
 <p> Appointment Status : <%= @appointment.appointment_status %> </p>
+<% if @appointment.appointment_status == 'Pending' %>
+	<div id='update-button'>
+          <button class='btn btn-outline-primary mr-2' value="<%= @appointment.appointment_status %>" data-enums=1>Accept</button>
+          <button class='btn btn-outline-danger ml-2' value="<%= @appointment.appointment_status %>" data-enums=2>Decline</button>
+        </div>
+<% end %>
 <%= link_to 'Back', all_appointments_path %>
