cleaned up code styling

--- a/app/views/appointments/_all.html.erb
+++ b/app/views/appointments/_all.html.erb
@@ -25,4 +25,4 @@
 							</tbody>
 					</table>
 				<%= paginate @appointments %>
-			<%= link_to 'Back', all_appointments_path %>
+			<%= link_to 'Back', root_path %>
