Updated gemfile and ruby version to utilize latest readline library * fixed issues with render partial locals * early bootstrap implementation and experimentation before getting to the final look

--- a/app/views/boats/index.html.erb
+++ b/app/views/boats/index.html.erb
@@ -3,5 +3,5 @@
 	<%= form.submit 'Search', class:'btn btn-primary ml-2' %>
 <% end %>
 <div id='boats-container'>
-	<%= render partial:"boats/index", locals => { :boats => @boats }%>
+	<%= render partial:"boats/index", locals: { :boats => @boats }%>
 </div>
