--- a/app/views/boats/_form.html.erb
+++ b/app/views/boats/_form.html.erb
@@ -2,17 +2,17 @@
 
   <div class="field">
     <%= form.label :make %>
-    <%= form.text_field :make %>
+    <%= form.text_field(:make, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :model %>
-    <%= form.text_field :model %>
+    <%= form.text_field(:model, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :year %>
-    <%= form.number_field :year %>
+    <%= form.number_field(:year, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
@@ -22,36 +22,36 @@
 
   <div class="field">
     <%= form.label :price, 'Price (RM)' %>
-    <%= form.number_field :price %>
+    <%= form.number_field(:price, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :make_type %>
-    <%= form.text_field :make_type %>
+    <%= form.text_field(:make_type, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :boat_class %>
-    <%= form.text_field :boat_class %>
+    <%= form.text_field(:boat_class, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :length, 'Length(ft)' %>
-    <%= form.number_field :length %>
+    <%= form.number_field(:length, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :fuel_type %>
-    <%= form.text_field :fuel_type %>
+    <%= form.text_field(:fuel_type, {:class => 'form-control'}) %>
   </div>
 
   <div class="field">
     <%= form.label :hull_material %>
-    <%= form.text_field :hull_material %>
+    <%= form.text_field(:hull_material, {:class => 'form-control'}) %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit({:class => 'btn btn-primary'}) %>
   </div>
 
 <% end %>
