Updated gemfile and ruby version to utilize latest readline library * fixed issues with render partial locals * early bootstrap implementation and experimentation before getting to the final look

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,58 @@
     <title>MMCompositeCraft</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <% flash.each do |key, value| %>
-            <%= value %>
-    <% end %>
+  <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-primary bg-light scrolling-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <strong>MMCompositeCraft</strong>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7" aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            <li class="nav-item">
+            <a class="nav-link" href="#">What Do We Do?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Our Engineers and Workers</a>
+          </li>
+          <% if current_user %>
+            <li class="nav-item">
+              <a class="nav-link" href="logout">Log Out</a>
+            </li>
+          <% else %>
+            <li class ="nav-item">
+              <a class="nav-link" href="login">Login</a>
+            </li>
+            <li>
+              <a class="nav-link" href="signup">Sign Up</a>
+            </li>
+          <% end %>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  <% flash.each do |key, value| %>
+          <%= value %>
+  <% end %>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
